--- a/compose.yaml
+++ b/compose.yaml
@@ -14,7 +14,7 @@ services:
     ports:
       - 27017:27017
     environment:
-      - MONGO_INITDB_DATABASE=test
+      #- MONGO_INITDB_DATABASE=test
       - MONGO_INITDB_ROOT_USERNAME=mongoadmin
       - MONGO_INITDB_ROOT_PASSWORD=Pwd!5382*
     volumes:
